--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  312.29  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -208,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\silva\\AppData\\Local\\Temp\\ipykernel_4148\\2608316851.py:18: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\silva\\AppData\\Local\\Temp\\ipykernel_26544\\2608316851.py:18: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  PCA_df[\"Tier\"] = PCA_df[\"Tier\"].replace(\"Platinum\",3)\n"
      ]
     },
@@ -289,7 +289,7 @@
        "4  4.016210  0.035092     3"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,16 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x17a6076a8d0>"
+       "<matplotlib.colorbar.Colorbar at 0x1947a23bfd0>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
